# assistente-lgpd-rag

./: requirements.txt
template-portfolio/: .env.example  .gitignore  README.md  pyproject.toml
template-portfolio/data/corpus/: README.md
template-portfolio/docs/: observability.md
template-portfolio/src/observability/: trace.py
template-portfolio/src/pipeline/: cache.py  rag.py  routing.py  tools.py
template-portfolio/src/ui/: streamlit_app.py
template-portfolio/tests/: test_smoke.py
